# axum-example

./: Cargo.toml
migrations/2024-04-08-023044_create_tags/: up.sql
migrations/test/2024-06-19-0234739_insert_test_data/: up.sql
src/: error.rs  handlers.rs  helper_types.rs  http.rs  main.rs  models.rs  schema.rs  sqlite.rs
src/http/: handler.rs
src/test/: context.rs  mod.rs
