[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
diesel = {  version = "2.2", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {  version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
axum-test-helper = { git = "https://github.com/justy777/axum-test-helper" }
rand = "0.8"